# QuartzLog

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
Include/: Color.h  DLL.h  Level.h  Log.h  LogLevel.h  Sink.h
Include/Sinks/Windows/: WinApiConsoleSink.h
Source/: Log.cpp  LogTest.cpp  Sink.cpp
Source/Linux/: LinuxLog.cpp
Source/WinApi/: WinApiLog.cpp
Source/Windows/: WinApiConsoleSink.cpp  WinApiLog.cpp
